// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connect Factory for bindings should component receive rules prop with all combined rules 1`] = `
Array [
  "<style>
    ._16onwti {
        padding: 2
    }

    ._xn368k {
        font-size: 16
    }

    ._sjf8sr {
        color: red
    }
</style>",
  <ConnectedFelaComponent>
    <ConnectedFelaComponent
        _felaTheme={Object {}}
    >
        <Component
            rules={[Function]}
            styles={
                Object {
                    "rule1": "_16onwti",
                    "rule2": "_xn368k",
                  }
            }
        >
            <div>
                <ConnectedFelaComponent
                    color="red"
                    extend={[Function]}
                >
                    <ConnectedFelaComponent
                        _felaTheme={Object {}}
                        color="red"
                        extend={[Function]}
                    >
                        <Component
                            color="red"
                            rules={[Function]}
                            styles={
                                Object {
                                    "rule1": "_16onwti",
                                    "rule2": "_sjf8sr _xn368k",
                                  }
                            }
                        >
                            <div>
                                <span
                                    className="_16onwti"
                                />
                                <span
                                    className="_sjf8sr _xn368k"
                                />
                            </div>
                        </Component>
                    </ConnectedFelaComponent>
                </ConnectedFelaComponent>
            </div>
        </Component>
    </ConnectedFelaComponent>
</ConnectedFelaComponent>,
]
`;

exports[`Connect Factory for bindings should compose styles 1`] = `
Array [
  "<style>
    ._16onwti {
        padding: 2
    }

    ._sjf8sr {
        color: red
    }

    ._xn368k {
        font-size: 16
    }
</style>",
  <FelaConnectedFelaComponent
    color="red"
>
    <FelaConnectedFelaComponent
        _felaTheme={Object {}}
        color="red"
    >
        <ConnectedFelaComponent
            _felaRules={[Function]}
            color="red"
        >
            <ConnectedFelaComponent
                _felaRules={[Function]}
                _felaTheme={Object {}}
                color="red"
            >
                <Component
                    color="red"
                    rules={[Function]}
                    styles={
                        Object {
                            "rule1": "_16onwti",
                            "rule2": "_sjf8sr _xn368k",
                          }
                    }
                >
                    <div>
                        <span
                            className="_16onwti"
                        />
                        <span
                            className="_sjf8sr _xn368k"
                        />
                    </div>
                </Component>
            </ConnectedFelaComponent>
        </ConnectedFelaComponent>
    </FelaConnectedFelaComponent>
</FelaConnectedFelaComponent>,
]
`;

exports[`Connect Factory for bindings should extend the rule properties 1`] = `
Array [
  "<style>
    ._16onwti {
        padding: 2
    }

    ._sjf8sr {
        color: red
    }

    ._xn368k {
        font-size: 16
    }
</style>",
  <ConnectedFelaComponent
    color="red"
    extend={
        Object {
            "rule1": Object {
              "padding": 2,
            },
            "rule2": Object {
              "fontSize": 16,
            },
          }
    }
>
    <ConnectedFelaComponent
        _felaTheme={Object {}}
        color="red"
        extend={
            Object {
                "rule1": Object {
                  "padding": 2,
                },
                "rule2": Object {
                  "fontSize": 16,
                },
              }
        }
    >
        <Component
            color="red"
            rules={[Function]}
            styles={
                Object {
                    "rule1": "_16onwti",
                    "rule2": "_sjf8sr _xn368k",
                  }
            }
        >
            <div>
                <span
                    className="_16onwti"
                />
                <span
                    className="_sjf8sr _xn368k"
                />
            </div>
        </Component>
    </ConnectedFelaComponent>
</ConnectedFelaComponent>,
]
`;

exports[`Connect Factory for bindings should not pass through "theme" prop when used without "ThemeProvider" 1`] = `
Array [
  "<style>
    ._ajw2h1 {
        padding: 1
    }

    ._sjf8sr {
        color: red
    }
</style>",
  <ConnectedFelaComponent
    color="red"
>
    <ConnectedFelaComponent
        _felaTheme={Object {}}
        color="red"
    >
        <Component
            color="red"
            rules={[Function]}
            styles={
                Object {
                    "rule1": "_ajw2h1",
                    "rule2": "_sjf8sr",
                  }
            }
        >
            <div
                color="red"
            >
                <span
                    className="_ajw2h1"
                />
                <span
                    className="_sjf8sr"
                />
            </div>
        </Component>
    </ConnectedFelaComponent>
</ConnectedFelaComponent>,
]
`;

exports[`Connect Factory for bindings should process rules and create classNames 1`] = `
Array [
  "<style>
    ._ajw2h1 {
        padding: 1
    }

    ._sjf8sr {
        color: red
    }
</style>",
  <ConnectedFelaComponent
    color="red"
>
    <ConnectedFelaComponent
        _felaTheme={Object {}}
        color="red"
    >
        <Component
            color="red"
            rules={[Function]}
            styles={
                Object {
                    "rule1": "_ajw2h1",
                    "rule2": "_sjf8sr",
                  }
            }
        >
            <div>
                <span
                    className="_ajw2h1"
                />
                <span
                    className="_sjf8sr"
                />
            </div>
        </Component>
    </ConnectedFelaComponent>
</ConnectedFelaComponent>,
]
`;

exports[`Connect Factory for bindings should process rules and create classNames with rules as function 1`] = `
Array [
  "<style>
    ._ajw2h1 {
        padding: 1
    }

    ._sjf8sr {
        color: red
    }
</style>",
  <ConnectedFelaComponent
    color="red"
>
    <ConnectedFelaComponent
        _felaTheme={Object {}}
        color="red"
    >
        <Component
            color="red"
            rules={[Function]}
            styles={
                Object {
                    "rule1": "_ajw2h1",
                    "rule2": "_sjf8sr",
                  }
            }
        >
            <div>
                <span
                    className="_ajw2h1"
                />
                <span
                    className="_sjf8sr"
                />
            </div>
        </Component>
    </ConnectedFelaComponent>
</ConnectedFelaComponent>,
]
`;
